2001-08-19  Jesus Bravo Alvarez  <jba@pobox.com>

	* configure.in: Added gl (Galician) to ALL_LINGUAS.

2001-08-15  Havoc Pennington  <hp@redhat.com>

	* backends/xml-backend.c (x_shutdown): ditto
	(resolve_address): ditto

	* backends/bdb-backend.c (vtable_bdb_shutdown): ditto
	(vtable_bdb_resolve_address): ditto

	* gconf/gconf-internals.c (gconf_load_source_path): ditto

	* gconf/gconfd.c (gconf_server_load_sources): change to DEBUG
	level

	* backends/xml-backend.c (g_module_check_init): change a log
	message to DEBUG level

2001-08-07  Marco Pesenti Gritti  <mpeseng@tin.it>

	* doc/gconf/gconf.sgml: small explanation about AM_GCONF_SOURCE
	macro
	* gconf.m4.in: fix a typo in dnl
	
2001-08-13  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-internals.c (gconf_load_source_path): patch from
	Adam Spiers to honor variables in include lines

	* gconf/gconf-database.c (notify_listeners_cb):
	indentation/whitespace changes

	* backends/xml-entry.c (entry_fill_from_node): Only print a
	warning if there's no schema name. Avoids spurious warnings 
	on nodes that only have a schema name.

2001-08-07  Marco Pesenti Gritti  <mpeseng@tin.it>

	* Makefile.am: Setup a default gconf source on make install
	* galeon.spec.in: Distribute also the path file and
	the directories for the default source
	* gconf/Makefile.am: install the default path as "path" instead
	of "path.example". Add GCONF_ETCDIR define.
	* gconf/gconftool.c: Add --get-default-source option
	* gconf/gconf.m4.in: Add GCONF_SCHEMA_CONFIG_SOURCE macro
	
2001-07-28  Yanko Kaneti  <yaneti@declera.com>

	* gconf/gconftool.c (main): s/all-pairs/all-entries/ in the error
	messages

2001-07-24  Darin Adler  <darin@bentspoon.com>

	* acinclude.m4: Set BUILD_INCLUDED_LIBINTL for compatibility
	with newer versions of gettext.

2001-07-23  Havoc Pennington  <hp@redhat.com>

	* gconf/gconfd.c (main): don't warn about failure to create
	~/.gconfd if EEXIST

	* gconf/gconf.c (gconf_engine_all_entries): convert empty string 