@@ -66,19 +66,23 @@ AC_ARG_ENABLE(gconftest, [  --disable-gconftest       Do not try to compile and 
 ])
 
 dnl AM_GCONF_SOURCE
-dnl Define GCONF_SCHEMA_CONFIG_SOURCE
+dnl Define GCONF_SCHEMA_CONFIG_SOURCE and GCONF_SCHEMA_FILE_DIR
 dnl
 AC_DEFUN(AM_GCONF_SOURCE,
 [
-if test "x$GCONF_SCHEMA_INSTALL_SOURCE" = "x"; then
-  GCONF_SCHEMA_CONFIG_SOURCE=`gconftool --get-default-source`
-else
-  GCONF_SCHEMA_CONFIG_SOURCE=$GCONF_SCHEMA_INSTALL_SOURCE
-fi
-
 AC_ARG_WITH(gconf-source, 
-[  --with-gconf-source=sourceaddress      Where to install schema files.],GCONF_SCHEMA_CONFIG_SOURCE="$withval",)
+[  --with-gconf-source=sourceaddress       Where to install the schema.],
+	GCONF_SCHEMA_CONFIG_SOURCE="$withval",
+	GCONF_SCHEMA_CONFIG_SOURCE=`gconftool --get-default-source`)
 
   AC_SUBST(GCONF_SCHEMA_CONFIG_SOURCE)
   AC_MSG_RESULT("Using config source $GCONF_SCHEMA_CONFIG_SOURCE for schema installation")
+
+AC_ARG_WITH(gconf-schema-dir, 
+[  --with-gconf-schema-dir=dir        Directory to install the schema files.],
+	GCONF_SCHEMA_FILE_DIR="$withval",
+	GCONF_SCHEMA_FILE_DIR=@EXPANDED_SYSCONFDIR@/gconf/schemas/)
+
+  AC_SUBST(GCONF_SCHEMA_FILE_DIR)
+  AC_MSG_RESULT("Using $GCONF_SCHEMA_FILE_DIR as schema files dir")
 ])
