@@ -1,3 +1,10 @@
+2001-08-28  Yanko Kaneti  <yaneti@declera.com>
+
+	* gconf.m4.in: add --with-gconf-schema-dir -> GCONF_SCHEMA_FILE_DIR
+	to the AM_GCONF_SOURCE macro.
+
+	* doc/gconf/gconf.sgml: update the docs wrt the above change.
+
 2001-08-19  Jesus Bravo Alvarez  <jba@pobox.com>
 
 	* configure.in: Added gl (Galician) to ALL_LINGUAS.
